add ayat_timing to render
